feat: add product audit logs and terminal guards